--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digital-photo",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.17.10",
@@ -24,7 +24,13 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+     "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,11 +58,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0"
+   
   }
 }
